--- a/index.html
+++ b/index.html
@@ -8,19 +8,18 @@
 
   <body>
 
-  <div class="navbar">
-  <h1 class="title">Broadway Design</h1>
-  <nav>
-    <a>Home</a> <br >
-    <a>About</a> <br >
-    <a>Work</a> <br >
-    <a>Team</a> <br >
-    <a>Contact</a>
-  </nav>
-
+  <div id="navbar">
+    <h1 class="bold white" id="title">Broadway Design</h1>
+      <nav class="white">
+        <a href="#title">Home</a><br ><br >
+        <a href="#process">About</a><br ><br >
+        <a href="#porfolio">Work</a><br ><br >
+        <a href="#team">Team</a><br ><br >
+        <a href="#contact">Contact</a>
+      </nav>
   </div>
 
-    <h2 class="process">Our Process</h2>
+    <h2 class="bold" id="process">Our Process</h2>
       <img src="resources/images/identify.svg">
       <h3 id="identify">Identify</h3>
         <p>We focus on the most important details</p>
@@ -31,26 +30,26 @@
       <h3 id="execute">Execute</h3>
         <p>We focus on the most important details</p>
 
-    <h2 class="break">Designed in New York</h2>
+    <h2 class="white" id="break">Designed in New York</h2>
       <h3 id="porfolio">Portfolio</h3>
         <p>Coming Soon</p>
       <h3 id="team">Team</h3>
         <p>We're Hiring</p>
       <h3 id="contact">Contact</h3>
         <p>
-          Phone:(555)-555-55555 <br >
-          E-mail: test@expample.com <br >
-          Twitter: @test <br >
+          Phone:(555)-555-55555 <br ><br >
+          E-mail: test@expample.com <br ><br >
+          Twitter: @test <br ><br >
         </p>
   </body>
 
-    <footer>
+    <footer class="white">
       © Broadway 2017
-      <a>Home</a>
-      <a>About</a>
-      <a>Work</a>
-      <a>Team</a>
-      <a>Contact</a>
+      <a href="#title">Home</a>
+      <a href="#process">About</a>
+      <a href="#portfolio">Work</a>
+      <a href="#team">Team</a>
+      <a href="#contact">Contact</a>
     </footer>
 
 </html>
